--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,16 @@
 .App {
+  margin: 3rem 5rem;
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.list {
+  margin:  2rem auto;
+  width: 10vw;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.box {
+  margin-top: 3rem;
+  border: 1px solid grey;
+  padding: 3rem;
+  height: 50vh;
 }
