--- a/src/App.css
+++ b/src/App.css
@@ -4,13 +4,22 @@
 }
 
 .list {
-  margin:  2rem auto;
+  margin: 2rem auto;
   width: 10vw;
 }
 
 .box {
-  margin-top: 3rem;
-  border: 1px solid grey;
+  margin-top: 1rem;
   padding: 3rem;
   height: 50vh;
+}
+
+.boxItem {
+  border: 1px solid grey;
+  margin: auto;
+  margin-bottom: 1rem;
+  box-shadow: 1px 2px darkgrey;
+  background: #A7A7A9;
+  width: 50vw;
+
 }
